[package]
name = "substrate"
version = "0.1.0"
edition = "2021"

# Pure computer-science / mathematics library. No features (no gpu/oracle/tracy).
# Two dependencies: rayon and glam. rayon backs the `SparseMinMipPyramid` fold
# (slice S7), which sorts its folded cell keys in parallel (`par_sort_unstable`),
# inheriting the data-parallelism the domain builder it was extracted from already
# used. glam backs the `Ray` primitive (slice G0): its slab-method ray–box test is
# vector arithmetic over `glam::Vec3`, matched to the workspace glam version so the
# app hands rays across the crate boundary without a conversion. Not intended for
# release; intended for reading, naming, and isolated performance reasoning. See the
# "Substrate" section of docs/architecture/data-structures.md for the boundary law.

# `cfg(kani)` gates the bounded-model-checking proofs in the finite bit/index kernels
# (`lattice_key.rs`, and the other decision-6 targets as they land). It is set only under
# `cargo kani`; register it here so ordinary `cargo`/clippy builds don't warn on the unknown
# cfg (the proofs stay inactive). See docs/design/substrate-extraction-map.md item 10b.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
rayon = "1"
glam = "0.33.1"

# criterion is a DEV-only dependency: it backs the on-demand microbenches in
# `benches/` and never enters the crate's normal dependency set. The benches are
# run by hand (`cargo bench -p substrate`); they are deliberately NOT wired into
# the commit gates or CI. Current stable criterion major is 0.8.
[dev-dependencies]
criterion = "0.8"

# Each bench target uses criterion's own harness, so the default libtest harness
# is disabled (`harness = false`, as criterion requires). Benches cover only the
# HOT substrate components — the ones whose cost the domain actually pays per edit
# or per frame.
[[bench]]
name = "bit_cube"
harness = false

[[bench]]
name = "bvh"
harness = false

[[bench]]
name = "disjoint_interval_set"
harness = false

[[bench]]
name = "greedy_cuboid_decomposition"
harness = false

[[bench]]
name = "lattice_key"
harness = false

[[bench]]
name = "min_mip_pyramid"
harness = false
